# Vesta

./: .gitignore  Cargo.toml  README.md  fix_translations.py  modifiche_da_fare.md  patch_flashcards.py  patch_transcribe.py  patch_translate.py  run_gui.sh
.github/workflows/: build.yml
Test_Subs/: serialize.py
apps/srt-gui/: package.json  patch_all.py  patch_transcribe.py
apps/srt-gui/reports/: missing_translations_report.json
apps/srt-gui/scripts/: check_missing_translations.py
apps/srt-gui/src/: App.svelte  main.ts
apps/srt-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/srt-gui/src-tauri/icons/: icon.icns
apps/srt-gui/src-tauri/src/: main.rs
apps/srt-gui/src/lib/: AlignTab.svelte  CodeEditor.svelte  FlashcardsTab.svelte  models.ts  (+7 more)
build-scripts/: .SRCINFO  PKGBUILD  build-aur.sh  check_internal_crate_versions.sh  git-release.sh  update_project_info.sh
cli/srt-extract-cli/: Cargo.toml
cli/srt-translate-cli/: Cargo.toml
cli/srt-translate-cli/src/: main.rs
core/srt-parser/: Cargo.toml
core/srt-parser/src/: lib.rs
docs/: README.md  release-notes.md
lib/srt-extract/: Cargo.toml
lib/srt-sync/: Cargo.toml
lib/srt-translate/: Cargo.toml
lib/srt-translate/src/: lib.rs  translator.rs
srt-gui/: package-lock.json  package.json
srt-gui/src/: App.svelte  app.css
srt-gui/src-tauri/: Cargo.toml  tauri.conf.json
srt-gui/src-tauri/src/: main.rs  state.rs
srt-gui/src-tauri/src/commands/: sync.rs  translate.rs
srt-gui/src/lib/: FlashcardsTab.svelte  SettingsTab.svelte  ShortcutsTab.svelte  Sidebar.svelte  SyncTab.svelte  TranscribeTab.svelte  TranslateTab.svelte  models.ts
srt-translate-lib/: Cargo.toml
srt-translate-lib/src/: lib.rs  prompts.rs  rate_limiter.rs  translator.rs
srt-translate/src/: main.rs
(+27 files in other folders)
